[project]
name = "h2spacex"
version = "0.1.8"
authors = [
  { name="nxenon", email="nasiri.aminm@gmail.com" },
]
license = { text="GPL-3.0" }
description = "HTTP/2 Single Packet Attack low level library based on Scapy"
readme = "README.md"
keywords = ["race-condition", "http2", "single-packet-attack"]
requires-python = ">=3.10"
dependencies = [
    "scapy==2.4.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nxenon/h2spacex"
"Bug Tracker" = "https://github.com/nxenon/h2spacex/issues"
"Wiki" = "https://github.com/nxenon/h2spacex/wiki"
"Examples" = "https://github.com/nxenon/h2spacex/wiki/Quick-Start-Examples"