[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "h2spacex"
version = "1.2.0"
authors = [
  { name="nxenon", email="nasiri.aminm@gmail.com" },
]
license = { text="GPL-3.0" }
description = "HTTP/2 Single Packet Attack low level library based on Scapy"
readme = "README.md"
keywords = ["race-condition", "http2", "single-packet-attack"]
requires-python = ">=3.8.8"
dependencies = [
    "scapy==2.5.0",
    "brotlipy==0.7.0",
    "PySocks==1.7.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[options]
package_dir= "."

[options.packages.find]
where="src"

[project.urls]
"Homepage" = "https://github.com/nxenon/h2spacex"
"Bug Tracker" = "https://github.com/nxenon/h2spacex/issues"
"Wiki" = "https://github.com/nxenon/h2spacex/wiki"
"Examples" = "https://github.com/nxenon/h2spacex/wiki/Quick-Start-Examples"